--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
                     <div class="home__data">
                         <h1 class="home__title">
-                        Penyakit Stroke
+                            Penyakit Febris pada Anak
                         </h1>
                         <p class="home__description">
                             Disponsori : Kelompok 2 Kelas A Keperawatan
@@ -120,7 +120,7 @@
                         </h2>
 
                         <p class="about__description">
-                            Selamat datang di website Kelompok 2 Kelas A Keperawatan! Pada situs ini, kami menghadirkan materi lengkap mengenai penyakit stroke untuk mendukung pemahaman dan pengelolaan kondisi ini. Semoga informasi yang kami sajikan dapat membantu Anda dalam mengenali gejala, penyebab, serta langkah pencegahan dan penanganannya. Selamat belajar dan tetap sehat!
+                            Selamat datang di website Kelompok 2 Kelas A Keperawatan! Pada situs ini, kami menghadirkan materi lengkap mengenai penyakit febris pada anak untuk mendukung pemahaman dan pengelolaan kondisi ini. Semoga informasi yang kami sajikan dapat membantu Anda dalam mengenali gejala, penyebab, serta langkah pencegahan dan penanganannya. Selamat belajar dan tetap sehat!
                         </p>
 
                         <a href="#teams" class="button button--flex">
@@ -133,7 +133,7 @@
             <!--==================== QUESTIONS ====================-->
             <section class="questions section" id="faqs">
                 <h2 class="section__title-center questions__title container">
-                    PENYAKIT STROKE
+                    PENYAKIT FEBRIS PADA ANAK
                 </h2>
 
                 <div class="questions__container container grid">
@@ -148,7 +148,7 @@
 
                             <div class="questions__content">
                                 <p class="questions__description">
-                                    Stroke adalah kondisi medis darurat yang terjadi ketika suplai darah ke otak terganggu, baik karena penyumbatan (stroke iskemik) atau pecahnya pembuluh darah (stroke hemoragik). Akibatnya, area otak yang terdampak tidak mendapatkan oksigen dan nutrisi yang diperlukan, menyebabkan kematian sel-sel otak.
+                                    Febris pada anak adalah kondisi medis yang ditandai dengan peningkatan suhu tubuh di atas normal, sering kali disebabkan oleh infeksi atau peradangan. Kondisi ini memerlukan perhatian khusus dalam asuhan keperawatan untuk memastikan kenyamanan dan keselamatan anak.
                                 </p>
                             </div>
                         </div>
@@ -157,13 +157,13 @@
                             <header class="questions__header">
                                 <i class="ri-add-line questions__icon"></i>
                                 <h3 class="questions__item-title">
-                                    JENIS-JENIS STROKE
+                                    JENIS-JENIS FEBRIS
                                 </h3>
                             </header>
 
                             <div class="questions__content">
                                 <p class="questions__description">
-                                    Stroke dapat dibagi menjadi tiga jenis utama: Stroke Iskemik, yang terjadi akibat penyumbatan pada pembuluh darah otak, biasanya karena bekuan darah atau plak; Stroke Hemoragik, yang terjadi akibat pecahnya pembuluh darah otak, sehingga darah masuk ke dalam jaringan otak; dan Transient Ischemic Attack (TIA), yaitu serangan iskemik sementara yang tidak menyebabkan kerusakan permanen pada otak.
+                                    Febris pada anak dapat dibagi menjadi beberapa jenis berdasarkan penyebab dan gejalanya, termasuk febris infeksius yang disebabkan oleh infeksi virus atau bakteri, febris non-infeksius yang dapat disebabkan oleh reaksi alergi atau penyakit autoimun, dan febris periodik yang terjadi secara berulang dengan pola tertentu.
                                 </p>
                             </div>
                         </div>
@@ -178,7 +178,7 @@
 
                             <div class="questions__content">
                                 <p class="questions__description">
-                                    Penyebab stroke meliputi hipertensi yang tidak terkendali, penyakit jantung, diabetes, dan kebiasaan merokok. Faktor risiko lainnya termasuk usia di atas 55 tahun, jenis kelamin perempuan, riwayat stroke pada keluarga, dan kolesterol tinggi.
+                                    Penyebab febris pada anak meliputi infeksi virus atau bakteri, reaksi imun tubuh, dan kondisi medis lainnya. Faktor risiko termasuk usia muda, sistem imun yang belum matang, dan paparan terhadap lingkungan yang terinfeksi.
                                 </p>
                             </div>
                         </div>
@@ -195,7 +195,7 @@
 
                             <div class="questions__content">
                                 <p class="questions__description">
-                                    Diagnosis stroke melibatkan tanya jawab mengenai riwayat kesehatan, pemeriksaan fisik, dan tes penunjang seperti CT scan, MRI, dan tes darah untuk mengetahui kadar gula darah, infeksi, dan kecepatan pembekuan darah.
+                                    Diagnosis febris pada anak melibatkan pengukuran suhu tubuh, pemeriksaan fisik, dan tes penunjang seperti tes darah atau urin untuk menentukan penyebab infeksi.
                                 </p>
                             </div>
                         </div>
@@ -210,7 +210,7 @@
 
                             <div class="questions__content">
                                 <p class="questions__description">
-                                    Pengelolaan stroke tergantung pada jenis stroke yang dialami. Tindakan yang dapat dilakukan meliputi pemberian obat-obatan seperti antikoagulan, operasi, dan terapi fisik untuk mendukung pemulihan. Terapi okupasi dan terapi psikologis juga penting untuk membantu penderita stroke dalam kembali ke kehidupan sehari-hari.
+                                    Pengelolaan febris pada anak melibatkan pemberian antipiretik untuk menurunkan demam, memastikan hidrasi yang cukup, dan pemantauan kondisi anak secara berkala. Asuhan keperawatan juga mencakup edukasi kepada orang tua mengenai tanda-tanda bahaya yang perlu diwaspadai.
                                 </p>
                             </div>
                         </div>
@@ -225,7 +225,7 @@
 
                             <div class="questions__content">
                                 <p class="questions__description">
-                                    Pencegahan stroke meliputi menjaga tekanan darah tetap rendah, menghindari merokok, menjaga diet sehat, berolahraga secara rutin, dan mengelola kondisi kesehatan seperti diabetes dan penyakit jantung
+                                    Pencegahan febris pada anak meliputi menjaga kebersihan, imunisasi sesuai jadwal, dan menghindari paparan terhadap sumber infeksi.
                                 </p>
                             </div>
                         </div>
