--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <!--==================== HOME ====================-->
             <section class="home" id="home">
                 <div class="home__container container grid">
-                    <img src="assets/img/element darah.png" alt="" class="home__img">
+                    <img src="https://img.lovepik.com/element/45006/8215.png_860.png" alt="" class="home__img">
 
                     <div class="home__data">
                         <h1 class="home__title">
